--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,7 @@
 
     </style>
     <title>홍영호의 포트폴리오</title>
+    <link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css">
     <script src="https://kit.fontawesome.com/d7ee5c5331.js" crossorigin="anonymous"></script>
   </head>
   <body>
